* Add user warnings
* Add Model in logs
* Allow to duplicate many records at once
* Improve netrpc communication speed
* Improve date widget to display mask only when having focus
* Fix for host with IPv6 enable but without default IPv6 route
* Add desktop entry
* Add win32 single executable
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release