@@ -21,6 +21,8 @@ class CellRendererText(gtk.GenericCellRenderer):
                 'Editable', 0, 10, 0, gobject.PARAM_READWRITE),
             'xalign': (gobject.TYPE_FLOAT, 'XAlign',
                 'XAlign', 0, 1, 0, gobject.PARAM_READWRITE),
+            'visible': (gobject.TYPE_INT, 'Visible',
+                'Visible', 0, 10, 0, gobject.PARAM_READWRITE),
     }
 
     def __init__(self):
@@ -30,9 +32,12 @@ class CellRendererText(gtk.GenericCellRenderer):
 
         self.text = self._renderer.get_property('text')
         self.editable = self._renderer.get_property('editable')
+        self.visible = True
 
     def do_set_property(self, pspec, value):
         setattr(self, pspec.name, value)
+        if pspec.name == 'visible':
+            return
         self._renderer.set_property(pspec.name, value)
         self.set_property("mode", self._renderer.get_property("mode"))
 
@@ -44,6 +49,8 @@ class CellRendererText(gtk.GenericCellRenderer):
 
     def on_render(self, window, widget, background_area, cell_area,
             expose_area, flags):
+        if not self.visible:
+            return
         # Handle Pixmap window as pygtk failed
         if type(window) == gtk.gdk.Pixmap:
             layout = widget.create_pango_layout(self.text)
@@ -59,11 +66,15 @@ class CellRendererText(gtk.GenericCellRenderer):
 
     def on_activate(self, event, widget, path, background_area, cell_area,
             flags):
+        if not self.visible:
+            return
         return self._renderer.activate(event, widget, path, background_area,
                 cell_area, flags)
 
     def on_start_editing(self, event, widget, path, background_area,
             cell_area, flags):
+        if not self.visible:
+            return
         if not event:
             event = gtk.gdk.Event(gtk.keysyms.Tab)
         editable = self._renderer.start_editing(event, widget, path,
